# Le-TO

./: .gitignore  2d.hpp  C0_triangles.hpp  LICENSE  OptimizationProblem.cpp  OptimizationProblem.hpp  README.md  SmallVector.hpp  SymSparse.hpp  TetMesh.hpp  TetMesh.jl  boundaries.hpp  compliance_gradient_check.cpp  convert_mesh.cpp  density-filter.cpp  density-filter.hpp  ersatz_stiffness.hpp  evaluator.cpp  evaluator.hpp  forward_model.cpp  forward_model.hpp  forward_solve_only.cpp  inspect-density-filter.cpp  lbracket.geo  mesh_traits.hpp  meson.build  meson_options.txt  options.cpp  options.hpp  options.toml  postprocess.cpp  read_gmsh.hpp  read_mesh.cpp  read_mesh.hpp  run_optimization.cpp  save_eigen.hpp  serialization.hpp  stress.cpp  stress.hpp  stress_jacobian_check.cpp  (+4 more)
Galerkin/: Galerkin.hpp
Galerkin/src/: BilinearQuadTransform.hpp  ElementBase.hpp  Elements.hpp  FunctionBase.hpp  Interval.hpp  Legendre.hpp  MetaLinAlg.hpp  Metanomials.hpp  Polynomials.hpp  Quadrature.hpp  Rationals.hpp  TransformBase.hpp  TriangleTransform.hpp  UniformScaling.hpp  utils.hpp
Galerkin/test/: Doxyfile  runner.cpp
